# vision-macula

./: README.md  environment.yaml  pyproject.toml  requirements.txt
scripts/: build.py
src/bsmu/macula/app/: __init__.py  __main__.py  app.py  main.py
src/bsmu/macula/app/configs/: MaculaApp.conf.yaml
src/bsmu/macula/configs/default/bsmu.macula/: app.MaculaApp.conf.yaml  plugins.BinaryEnsemblePlugin.conf.yaml
src/bsmu/macula/configs/default/bsmu.vision/: plugins.palette.PalettePackSettingsPlugin.conf.yaml  plugins.tools.viewer.image.WsiSmartBrushImageViewerToolPlugin.conf.yaml
src/bsmu/macula/inference/: enseble.py  inferecer.py
src/bsmu/macula/infervis/: mdi.py  mdi_ensemble_segmenter.py
src/bsmu/macula/plugins/: ensemble_segmenter.py  main_window.py
src/bsmu/macula/plugins/configs/: MaculaMainWindowPlugin.conf.yaml
src/bsmu/macula/plugins/gui/: ensemble_segmenter_gui.py
src/bsmu/macula/plugins/images/: icons.qrc  icons_rc.py
