[build-system]
requires = [ 'setuptools >= 69.0' ]
build-backend = 'setuptools.build_meta'

[project]
name = 'bsmu.macula'
dynamic = [ 'version' ]
description = 'This application analyzes OCT images to detect and monitor Age-Related Macular Degeneration'
readme = 'README.md'
requires-python = '>= 3.10'
license = { file = 'LICENSE' }
authors = [
    { name = 'Elena Himbitskaya', email = 'fpm.gimbicka@bsu.by' },
]
keywords = [
    'age-related macular degeneration',
    'amd',
    'optical coherence tomography',
    'oct',
    'image analysis',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Healthcare Industry',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Version Control :: Git',
]
dependencies = [
    'bsmu.vision[common,nn_inference,build] @ git+https://github.com/BSMU-ITLab/vision.git@v0.31.2',
]

[project.urls]
Homepage = 'https://github.com/BSMU-ITLab/vision-macula'
Repository = 'https://github.com/BSMU-ITLab/vision-macula.git'
Issues = 'https://github.com/BSMU-ITLab/vision-macula/issues'

[project.scripts]
bsmu-macula-c = 'bsmu.macula.app.main:run_app'

[project.gui-scripts]
bsmu-macula = 'bsmu.macula.app.main:run_app'

[tool.setuptools.dynamic]
version = { attr = 'bsmu.macula.__version__' }

[tool.setuptools.packages.find]
where = [ 'src' ]

[tool.setuptools.package-data]
'*' = [ '**/*.conf.yaml' ]
